Fix crash on KisMergeLabeledLayersCommand when using color labeled transform masks

Now the masks are ignored when constructing the merged reference device
BUG:480601